# OCR_Sudoku

./: .gitignore  CMakeLists.txt  Makefile  README.md  analyze_gridsearch.py  best_model_grid_search.txt  check_gpu.sh  download_mnist.sh  out_easyc_1.txt  results_table.tex  run_api.sh  run_quick_gridsearch.sh
api/: main.py
data/augmentation/: 1_generate_data_augmentation.py  2_prepare_digital_dataset.py
docs/: GRID_SEARCH.md  QUICKSTART.md  SYNTHESIS.md
models/: best_params.txt  grid_search_results.csv
src/: cell_extractor.c  cell_extractor.h  cnn_model.c  cnn_model.h  cnn_training.c  cnn_training.h  dataset_loader.c  dataset_loader.h  evaluate_model.c  grid_detector.c  grid_detector.h  grid_search.c  image_composer.c  image_composer.h  image_loader.c  image_loader.h  main.c  perspective.c  perspective.h  preprocessor.c  preprocessor.h  sudoku_solver.c  sudoku_solver.h  train_cnn.c  utils.c  utils.h
